Fix T80516: Hook modifier crashes without vertex group data

Checks for existence of a vertex group must check the array isn't NULL.

Regression in c1386795a922.